@@ -2,6 +2,8 @@ Cascading Change Log
 
 unreleased
 
+  Changed c.f.MultiMapReducePlanner to normalize heterogeneous sinks. 
+
   Changed c.f.MultiMapReducePlanner to keep a splitting c.p.Each on the previous step, instead of being duplicated
   on each branch. If the Each is preceeded by a source c.t.Tap, it will be duplicated across branches to reduce
   the number of step in the Flow.
